--- a/application/templates/GunmanJump.html
+++ b/application/templates/GunmanJump.html
@@ -39,7 +39,7 @@
         <!-- Background -->
         <section class="sub-section" id="bg-subsection">
             <h4>Background</h4>
-            <p>Gunman Jump is a video game inspired by Doodle Jump and Gun Mayhem. I wrote this game in Grade 12 using Actionscript3, and since this is a personal project, I have uploaed all source code on GitHub. Portal to the code is <a href="https://github.com/helen-23/GunmanJump/">here</a>. Below are two short demos I recorded for the game. On the left is a video walkthrough for the single player mode, and on the right is for multiplayer mode.</p>
+            <p>This video game was inspired from Doodle Jump and Gun Mayhem. I wrote the game in Grade 12 using Actionscript3, and since this is a personal project, I have uploaed all source code on GitHub. Portal to the code is <a href="https://github.com/helen-23/GunmanJump/">here</a>. Below are two short demos I recorded for the game (single player and multiplayer mode, respectively).</p>
             <div class="row section-element">
                 <div class="col-lg-6 my-auto">
                     <iframe width="100%" height="260" src="https://www.youtube.com/embed/b61huHCox3c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -52,7 +52,7 @@
         <!-- Game Play -->
         <section class="sub-section" id="rules-subsection">
             <h4>Game Play</h4>
-            <p>In the traditional Doodle Jump game, the aim is to guide the main character up a never-ending series of platforms without falling. In Gun Mayhem, the task is to destroy all enemies by shooting them down a stationary platform. Gunman Jump is a combination of the two, so the player’s goal is to stay on the platform by jumping up the levels as the platforms move down, while also avoiding bullets that will nudge the player off the platforms.</p>
+            <p>In GunmanJump, <mark>your goal is to guide your character up a never-ending series of platforms without falling, while also avoiding bullets that will nudge the you off the platforms</mark>. In single player mode, these bullets come from a series of cannons positioned on the platforms, while in multi-player mode, players have guns to battle against each other.</p>
         </section>
     </section>
 
@@ -76,7 +76,7 @@
         </div>
         <div class="row section-element">
             <div class="col-lg-6 my-auto vertical-center">
-                <p>In single player mode, there are randomly positioned cannons on parts of the platforms, and they will periodically shoot bullets in fixed directions, so the player should avoid being shot while moving his or her way up.</p>
+                <p>In single player mode, there are randomly positioned cannons on parts of the platforms, and they will periodically shoot bullets in a fixed direction, you need to dodge the bullets while moving your way up.</p>
             </div>
             <div class="col-lg-6 my-auto">
                 <div class="page">
@@ -101,11 +101,11 @@
                 </div>
             </div>
             <div class="col-lg-6 my-auto vertical-center">
-                <p>In multiplayer mode, the game can support up to three players, and each player’s task is to nudge the enemies off the platform by shooting at them.</p>
+                <p>In multiplayer mode, the game can support up to three players, and thier task is to nudge their enemies off the platform with a gun.</p>
             </div>
         </div>
             
-        <p>A fun feature of the game I have decided to implement is the customization of characters. At the start of the game, it will prompt the player(s) to enter a name and to pick a costume. It will also ask the player(s) to specify the number of lives for each player in the round. After entering the game, each player can be revived up to the number of lives specified.</p>
+        <p>A fun feature of the game I have decided to implement is the customization of characters. At the start of every game, it prompts the player(s) to enter a name and pick a costume. The interface will also ask the player(s) to specify the number of lives for each player in this round.</p>
         <div class="row section-element">
             <div class="col-lg-6 my-auto">
                 <div class="page">
@@ -131,7 +131,7 @@
 
         <div class="row section-element">
             <div class="col-lg-6 my-auto">
-                <p>Each time when a player shoots someone off the platforms in multiplayer mode, that player will be awarded with points. When the game ends (only one player left standing), the game will switch to a leaderboard view with the history scores of all existing players in descending order of scores.</p>
+                <p>Each time when a player shoots someone off the platforms in multiplayer mode, that player will be awarded with points. When the game ends with just one player left standing, you will see a leaderboard with the history scores of all existing players.</p>
             </div>
             <div class="col-lg-6 my-auto">
                 <div class="page">
