--- a/application/templates/ReversiAI.html
+++ b/application/templates/ReversiAI.html
@@ -38,7 +38,7 @@
         <div class="card-body">
             <p><b>Duration:</b> March 2017 - Apr 2017 (1 month) </p>
             <p><b>Skills/Tools:</b> C, SFML </p>
-            <p><b>Outcome:</b> 3rd Place in the UofT Reversi AI Challenge </p>
+            <p><b>Awards:</b> 3rd Place in the UofT Reversi AI Challenge </p>
         </div>
     </div>
 
