--- a/application/templates/PocketTravel.html
+++ b/application/templates/PocketTravel.html
@@ -45,7 +45,8 @@
             <p><b>Team Members:</b> Helen Dai, Vicky Liu, Verna Tian </p>
             <p><b>Duration:</b> Jan 2018 - Apr 2018 (4 months) </p>
             <p><b>Skills/Tools:</b> C++, EzGL </p>
-            <p><b>My Role:</b> UI Design, Algorithm Research/Implementation </p>
+            <p><b>Outcome:</b> Top 10 in the 2018 ECE297 Leaderboard </p>
+            <p><b>My Role:</b> UI Designer, Algorithm Researcher, Backend Developer </p>
         </div>
     </div>
 
