Completed all project page written contents

--- a/application/templates/PocketTravel.html
+++ b/application/templates/PocketTravel.html
@@ -42,7 +42,7 @@
 {% load static %}
     <div class="card text-center mx-auto team-info-card">
         <div class="card-body">
-            <p><b>Team Members:</b> Helen Dai, Vicky Liu, Verna Tian </p>
+            <p><b>Team Members:</b> Xiao Ying (Helen) Dai, Jue Liu, Yihan Tian </p>
             <p><b>Duration:</b> Jan 2018 - Apr 2018 (4 months) </p>
             <p><b>Skills/Tools:</b> C++, EzGL </p>
             <p><b>Outcome:</b> Top 10 in the 2018 ECE297 Leaderboard </p>
