--- a/application/static/css/styles.css
+++ b/application/static/css/styles.css
@@ -374,6 +374,7 @@ img.gallery-img {
     transform: translateY(-50%);
     padding-left: 10px;
     transition: all .5s;
+    font-size: 14pt;
 }
 
 .sidebar-nav a {
@@ -384,6 +385,7 @@ img.gallery-img {
     font-weight: 400;
     padding-top: 1px;
     padding-bottom: 1px;
+    font-size: 11pt;
 }
 
 .nav-pills .nav-link.active,
@@ -483,6 +485,21 @@ img.gallery-img {
     margin-left: 7px;
 }
 
+.page .titlebar-small {
+    height: 20px;
+    background-color: black;
+}
+
+.page .titlebar .dot-small {
+    width: 8px;
+    height: 8px;
+    margin-bottom: 5px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 50%;
+    margin-left: 7px;
+}
+
 .page .titlebar .closes {
     background-color: #ef6866;
 }
@@ -541,6 +558,19 @@ img.gallery-img {
     max-width: 60%;
     border-radius: 6px;
     margin-bottom: 20px;
+}
+
+.myCarousel {
+    margin-left: 50px;
+    margin-right: 50px;
+}
+  
+.my-prev-icon {
+    margin-left: -6vw;
+}
+
+.my-next-icon {
+    margin-right: -6vw;
 }
 
 /* contact/footer
